...
      <Tab.Screen
        name="Properties"
        component={PropertiesList}
        options={{
          title: 'Properties',
          tabBarTestID: 'properties_tab',
          tabBarAccessibilityLabel: 'Properties Tab',
        }}
      />
      <Tab.Screen
        name="Agreements"
        component={YieldAgreementsList}
        options={{
...
